--- a/APPS/tutget-main/tutget-ui/angular.json
+++ b/APPS/tutget-main/tutget-ui/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "baseHref": "./",
+            "baseHref": "/",
             "outputPath": "dist/static",
             "index": "src/index.html",
             "main": "src/main.ts",
