--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,13 @@
     "configurations": [
         {
             "type": "java",
+            "name": "PaymentApplication",
+            "request": "launch",
+            "mainClass": "nucleus.tutget.service.payment.PaymentApplication",
+            "projectName": "payment"
+        },
+        {
+            "type": "java",
             "name": "Spring Boot-TutgetMainApplication<tutget-main>",
             "request": "launch",
             "cwd": "${workspaceFolder}",
