--- a/APPS/tutget-main/src/main/resources/application.properties
+++ b/APPS/tutget-main/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=tutget-main
+
+#spring.config.import=configserver:http://localhost:9000
+
+management.endpoints.web.exposure.include=refresh
+
+server.port=9000
