Added jwt, https, and various fixes/handling

--- a/APPS/tutget-main/src/main/resources/application.properties
+++ b/APPS/tutget-main/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.application.name=tutget-main
 spring.config.import=configserver:http://localhost:8887
 
 management.endpoints.web.exposure.include=refresh
+
+# Jwt key
+jjwt.key=${JJWT_KEY:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaab}
+
+# HTTPS cert
+server.port=8443
+server.ssl.key-store=classpath:server.p12
+# TODO: Env variables
+server.ssl.key-store-password=pink
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=springmvc
