--- a/APPS/tutget-main/src/main/resources/application.properties
+++ b/APPS/tutget-main/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.application.name=tutget-main
 spring.config.import=configserver:http://localhost:8887
 
 management.endpoints.web.exposure.include=refresh
+
+server.port=9000
