--- a/APPS/tutget-main/tutget-ui/package.json
+++ b/APPS/tutget-main/tutget-ui/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "angular-oauth2-oidc": "^17.0.2",
     "crypto-js": "^4.1.1",
     "rxjs": "~7.8.0",
     "secure-web-storage": "^1.0.2",
