--- a/APPS/tutget-main/src/main/resources/application.properties
+++ b/APPS/tutget-main/src/main/resources/application.properties
@@ -15,3 +15,5 @@ jjwt.key=${JJWT_KEY:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaab}
 server.ssl.key-store-password=pink
 server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=springmvc
+
+#server.ssl.enabled=false
