Song 30/10: - api gateway in tutget main

--- a/APPS/tutget-main/src/main/resources/application.properties
+++ b/APPS/tutget-main/src/main/resources/application.properties
@@ -17,3 +17,7 @@ server.ssl.key-store-type=PKCS12
 server.ssl.key-alias=springmvc
 
 #server.ssl.enabled=false
+
+spring.main.web-application-type=reactive
+
+spring.main.allow-bean-definition-overriding=true
