--- a/APPS/gateway/src/main/resources/application.yml
+++ b/APPS/gateway/src/main/resources/application.yml
@@ -6,6 +6,8 @@ spring:
     name: gateway
   cloud:
     gateway:
+      default-filters:
+        - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
       filter:
         request-rate-limiter:
           deny-empty-key: false
