--- a/APPS/tutget-main/src/main/resources/application.yml
+++ b/APPS/tutget-main/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
         add-to-simple-url-handler-mapping: true
       routes:
         - id: listing-service
-          uri: lb://listing-service:8091
+          uri: lb://listing-service
           predicates:
             - Path=/listings/**
           filters:
@@ -32,7 +32,7 @@ spring:
                 redis-rate-limiter.burstCapacity: 20
                 redis-rate-limiter.requestedTokens: 1
         - id: payment-service
-          uri: lb://payment-service:8092
+          uri: lb://payment-service
           predicates:
             - Path=/payment/**
           filters:
@@ -47,7 +47,7 @@ spring:
                 redis-rate-limiter.burstCapacity: 20
                 redis-rate-limiter.requestedTokens: 1
         - id: profile-service
-          uri: lb://profile-service:8093
+          uri: lb://profile-service
           predicates:
             - Path=/users/**
           filters:
@@ -62,7 +62,7 @@ spring:
                 redis-rate-limiter.burstCapacity: 20
                 redis-rate-limiter.requestedTokens: 1
         - id: qna-service
-          uri: lb://qna-service:8094
+          uri: lb://qna-service
           predicates:
             - Path=/qna/**
           filters:
@@ -77,7 +77,7 @@ spring:
                 redis-rate-limiter.burstCapacity: 20
                 redis-rate-limiter.requestedTokens: 1
         - id: search-service
-          uri: lb://search-service:8096
+          uri: lb://search-service
           predicates:
             - Path=/search/**
           filters:
