--- a/APPS/service-profiles/src/main/resources/application.properties
+++ b/APPS/service-profiles/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 server.port=8093
 spring.application.name=profile-service
+
+spring.datasource.url=jdbc:mysql://localhost:3306/tutget
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
