--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -32,6 +32,8 @@ jobs:
         continue-on-error: true
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+         with:
+          args: --all-projects
   zap_scan:
     runs-on: ubuntu-latest
     needs: security
