--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -1,6 +1,10 @@
 name: Build code, run unit test, run SAST, SCA, DAST security scans for NodeJs App
 on: push
 
+defaults:
+ run:
+  working-directory: ./APPS
+  
 jobs:
   build:
     runs-on: ubuntu-latest
