--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -13,9 +13,10 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
+        cache-dependency-path: subdir/package-lock.json
         node-version: 16
         cache: npm
-    - run: npm install
+    - run: npm ci
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
