--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -1,6 +1,9 @@
 name: Build code, run unit test, run SAST, SCA, DAST security scans for NodeJs App
-on: push
 
+on:
+  push:
+    branches: [ main ]
+    
 defaults:
   run:
     working-directory: ./APPS/tutget-main/tutget-ui
