--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -16,7 +16,7 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
       with:
-        cache-dependency-path: subdir/package-lock.json
+        cache-dependency-path: ./package-lock.json
         node-version: 16
         cache: npm
     - run: npm ci
