--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -21,7 +21,7 @@ jobs:
         cache: npm
     - name: Install dependencies
       working-directory: ./APPS/tutget-main/tutget-ui
-      run: npm install
+      run: npm ci
     - name: SonarCloud Scan
       uses: sonarsource/sonarcloud-github-action@master
       env:
@@ -29,7 +29,7 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
-          -Dsonar.organization=leeziya
+          -Dsonar.organization=LEEZIYA
           -Dsonar.projectKey=leeziya
   security:
     runs-on: ubuntu-latest
