--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -29,8 +29,8 @@ jobs:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
       with:
         args: >
-          -Dsonar.organization=LEEZIYA
-          -Dsonar.projectKey=leeziya
+          -Dsonar.organization=leeziya
+          -Dsonar.projectKey=LEEZIYA_TutGet
   security:
     runs-on: ubuntu-latest
     needs: build
