--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -31,6 +31,7 @@ jobs:
         args: >
           -Dsonar.organization=leeziya
           -Dsonar.projectKey=LEEZIYA_TutGet
+          -Dsonar.exclusions=.java
   security:
     runs-on: ubuntu-latest
     needs: build
