--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -14,24 +14,39 @@ jobs:
     name: Run unit tests and SAST scan on the source code 
     steps:
     - uses: actions/checkout@v3
-    - uses: actions/setup-node@v3
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
       with:
-        cache-dependency-path: ./APPS/tutget-main/tutget-ui/package-lock.json
-        node-version: 16
-        cache: npm
-    - name: Install dependencies
-      working-directory: ./APPS/tutget-main/tutget-ui
-      run: npm ci
-    - name: SonarCloud Scan v2
-      uses: sonarsource/sonarcloud-github-action@master
+        java-version: '17'
+        distribution: 'adopt'
+        cache: maven
+    - name: Build with Maven cloud
+    working-directory: ./APPS/tutget-main
+      run:  mvn -B verify sonar:sonar -Dsonar.projectKey=LEEZIYA_TutGet -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      with:
-        args: >
-          -Dsonar.organization=leeziya
-          -Dsonar.projectKey=LEEZIYA_TutGet
-          -Dsonar.exclusions=.java
+    # steps:
+    # - uses: actions/checkout@v3
+    # - uses: actions/setup-node@v3
+    #   with:
+    #     cache-dependency-path: ./APPS/tutget-main/tutget-ui/package-lock.json
+    #     node-version: 16
+    #     cache: npm
+    # - name: Install dependencies
+    #   working-directory: ./APPS/tutget-main/tutget-ui
+    #   run: npm ci
+      
+    # - name: SonarCloud Scan v2
+    #   uses: sonarsource/sonarcloud-github-action@master
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    #   with:
+    #     args: >
+    #       -Dsonar.organization=leeziya
+    #       -Dsonar.projectKey=LEEZIYA_TutGet
+    #       -Dsonar.exclusions=.java
   security:
     runs-on: ubuntu-latest
     needs: build
