--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -22,7 +22,7 @@ jobs:
         cache: maven
     - name: Build with Maven cloud
       working-directory: ./APPS/tutget-main
-      run:  mvn -B verify sonar:sonar -Dsonar.projectKey=LEEZIYA_TutGet -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
+      run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=LEEZIYA_TutGet -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
