--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -20,12 +20,18 @@ jobs:
         java-version: '17'
         distribution: 'adopt'
         cache: maven
-    - name: Build with Maven cloud
+    - name: Build with Maven cloud main
       working-directory: ./APPS/tutget-main
       run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=LEEZIYA_TutGet -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    - name: Build with Maven cloud login
+      working-directory: ./APPS/service-profiles
+      run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_login -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_PROFILE
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_PROFILE }}
     # steps:
     # - uses: actions/checkout@v3
     # - uses: actions/setup-node@v3
