--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -31,7 +31,13 @@ jobs:
       run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_login -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_PROFILE
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN_PROFILE }}
+        SONAR_TOKEN_PROFILE: ${{ secrets.SONAR_TOKEN_PROFILE }}
+    - name: Build with Maven cloud login
+      working-directory: ./APPS/service-listing
+      run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_listing -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_LISTING
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN_LISTING: ${{ secrets.SONAR_TOKEN_LISTING }}  
     # steps:
     # - uses: actions/checkout@v3
     # - uses: actions/setup-node@v3
