--- a/.github/workflows/devsecops-workflow.yml
+++ b/.github/workflows/devsecops-workflow.yml
@@ -22,22 +22,35 @@ jobs:
         cache: maven
     - name: Build with Maven cloud main
       working-directory: ./APPS/tutget-main
-      run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=LEEZIYA_TutGet -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-    - name: Build with Maven cloud login
-      working-directory: ./APPS/service-profiles
-      run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_login -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_PROFILE
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN_PROFILE: ${{ secrets.SONAR_TOKEN_PROFILE }}
-    - name: Build with Maven cloud login
-      working-directory: ./APPS/service-listing
-      run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_listing -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_LISTING
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR_TOKEN_LISTING: ${{ secrets.SONAR_TOKEN_LISTING }}  
+      run:  mvn clean install -Dmaven.test.skip=true 
+
+    # - uses: actions/checkout@v3
+    # - name: Set up JDK 17
+    #   uses: actions/setup-java@v3
+    #   with:
+    #     java-version: '17'
+    #     distribution: 'adopt'
+    #     cache: maven
+    # - name: Build with Maven cloud main
+    #   working-directory: ./APPS/tutget-main
+    #   run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=LEEZIYA_TutGet -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+    # - name: Build with Maven cloud login
+    #   working-directory: ./APPS/service-profiles
+    #   run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_login -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_PROFILE
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN_PROFILE: ${{ secrets.SONAR_TOKEN_PROFILE }}
+    # - name: Build with Maven cloud login
+    #   working-directory: ./APPS/service-listing
+    #   run:  mvn -B verify sonar:sonar -Dmaven.test.skip=true -Dsonar.projectKey=leeziya_listing -Dsonar.organization=leeziya -Dsonar.host.url=https://sonarcloud.io -Dsonar.token=$SONAR_TOKEN_LISTING
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     SONAR_TOKEN_LISTING: ${{ secrets.SONAR_TOKEN_LISTING }}
+
+    
     # steps:
     # - uses: actions/checkout@v3
     # - uses: actions/setup-node@v3
